# secret_santa

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  deployment_script.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
games/: admin.py  draw.py  forms.py  helpers.py  models.py  urls.py  views.py
games/management/commands/: create_santas_for_users.py  draw.py
games/migrations/: 0001_initial.py  0002_alter_game_draw_date_alter_game_gift_date_and_more.py  0003_exclusion.py  0004_alter_customuser_email.py  0005_rename_game_santa_games.py  0006_alter_game_max_price.py  0007_alter_santa_user.py  0008_game_url.py  0009_alter_game_url.py  0010_alter_game_coordinator.py
games/templates/: base.html  index.html
games/templates/games/: base.html  congrat_page.html  create_game.html  exclusions.html  greeting_page.html  index.html  invite_user.html  invited_person_registration.html  login.html  profile.html  register_user.html  santa_card.html  show_game.html  update_game.html  update_user.html
secret_santa/: settings.py  urls.py
static/css/: styles.css
